--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.8.21'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.21'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.21'
+
     implementation 'com.google.mlkit:face-detection:16.1.5'
     implementation 'androidx.camera:camera-core:1.3.0-alpha07'
     implementation 'com.google.guava:guava:27.1-android'
